# fastapi-blog

./: .flake8  .pre-commit-config.yaml  pyproject.toml  readme.MD
app/: config.py  db.py  main.py
app/blogs/: authorizer.py  router.py  schemas.py  services.py
app/comments/: authorizer.py  router.py  schemas.py  services.py
app/core/: auth.py  exceptions.py  string.py
app/core/middleware/: auth_middleware.py
app/sql/: create_blog_table.sql  create_comment_table.sql  create_user_table.sql
app/users/: helpers.py  router.py  schemas.py  services.py
requirements/: base.txt  local.txt
