[tool.poetry]
name = "fastapi_blog"
version = "0.1.0"
description = "A FastAPI blog application which aims to cover core concepts of building an API application."
authors = ["Dakshesh Jain"]
license = "GPL-3.0"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["app"]
skip = ["env/"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-docstring", "invalid-name"]
